--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
         </div>
     </div>
     <script type="text/python">
-        from browser import document, html, window, timer
+        from browser import document, html, window
 
         WIDTH, HEIGHT = 800, 600
         PLAYER_SIZE = 50
