--- a/index.html
+++ b/index.html
@@ -588,7 +588,7 @@
             top_scores = data
 
         def trigger_github_action(name, score):
-            token = 'YOUR_NEW_GITHUB_TOKEN'  # Replace this with the actual GitHub token for testing
+            token = 'GH_TOKEN'  # Replace this with the actual GitHub token for testing
             headers = {
                 'Authorization': f'token {token}',
                 'Accept': 'application/vnd.github.v3+json'
