--- a/index.html
+++ b/index.html
@@ -209,8 +209,8 @@
 
         def initialize_game():
             global enemies, bullets, enemy_bullets, laser_beams, diagonal_shots, showing_level_title, ENEMY_SPEED, game_over, level, game_started, score, boss_hits, level_start_time
+            rows = 3  # Keep number of rows the same for each level
             if level <= MAX_LEVELS:
-                rows = 3 + level  # Increase number of rows with each level
                 enemies = [{"pos": [col * (ENEMY_SIZE + 10) + 50, row * (ENEMY_SIZE + 10) + 50], "img": faces[int(window.Math.random() * len(faces))]} for row in range(rows) for col in range(8)]
             else:
                 enemies = []
@@ -276,6 +276,8 @@
             if high_score_updated:
                 ctx.fillText("New High Score!", WIDTH // 2, HEIGHT // 1.7)
                 show_high_score_prompt()
+            else:
+                window.setTimeout(reset_game, 3000)
 
         def show_high_score_prompt():
             high_score_modal.style.display = "block"
@@ -639,3 +641,4 @@
     </script>
 </body>
 </html>
+
