--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
             font-size: 24px;
             font-family: 'Press Start 2P', cursive;
             color: white;
+            font-weight: bold; /* Make the font bold */
         }
         #high-score-modal {
             display: none;
@@ -209,7 +210,7 @@
 
         def initialize_game():
             global enemies, bullets, enemy_bullets, laser_beams, diagonal_shots, showing_level_title, ENEMY_SPEED, game_over, level, game_started, score, boss_hits, level_start_time
-            rows = 3 + level  # Add one extra row for each level
+            rows = 3 + level - 1  # Add one extra row for each level
             cols = 8 + level  # Add one extra column for each level
             if level <= MAX_LEVELS:
                 enemies = [{"pos": [col * (ENEMY_SIZE + 10) + 50, row * (ENEMY_SIZE + 10) + 50], "img": faces[int(window.Math.random() * len(faces))]} for row in range(rows) for col in range(cols)]
