--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
             text-align: center;
             background-color: black;
             color: white;
-            font-family: 'Press Start 2P', cursive;
+            font-family: 'Press Start 2P', monospace;
             overflow: hidden;
         }
         canvas {
@@ -61,9 +61,9 @@
         }
         #loading-text {
             font-size: 24px;
-            font-family: 'Press Start 2P', cursive;
+            font-family: 'Press Start 2P', monospace;
             color: white;
-            font-weight: bold; /* Make the font bold */
+            font-weight: bold;
         }
         #high-score-modal {
             display: none;
@@ -76,7 +76,7 @@
             overflow: auto;
             background-color: rgba(0, 0, 0, 0.9);
             color: white;
-            font-family: 'Press Start 2P', cursive;
+            font-family: 'Press Start 2P', monospace;
         }
         #high-score-modal-content {
             background-color: black;
@@ -91,14 +91,14 @@
             width: 80%;
             height: 40px;
             font-size: 20px;
-            font-family: 'Press Start 2P', cursive;
+            font-family: 'Press Start 2P', monospace;
             margin-bottom: 10px;
         }
         #submit-name {
             width: 80%;
             height: 40px;
             font-size: 20px;
-            font-family: 'Press Start 2P', cursive;
+            font-family: 'Press Start 2P', monospace;
             background-color: #00ff00;
             border: none;
             cursor: pointer;
