--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
         spaceship_img = html.IMG(src="spaceship.png")
         title_img = document["title-img"]
         boss_img = html.IMG(src="boss.png")
-        face_images = ["face_0.png", "face_1.png", "face_2.png", "face_3.png", "face_5.png", "face_6.png"]
+        face_images = ["face_0.png", "face_1.png", "face_2.png", "face_3.png", "face_5.png", "face_6.png", "face_7.jpg", "face_8.jpg"]
         faces = [html.IMG(src=img) for img in face_images]
 
         enemies = []
