--- a/index.html
+++ b/index.html
@@ -169,8 +169,39 @@
         spaceship_img = html.IMG(src="spaceship.png")
         title_img = document["title-img"]
         boss_img = html.IMG(src="boss.png")
+
+        # (Kept here for reference; no longer used for standard enemies)
         face_images = ["face_0.png", "face_1.png", "face_2.png", "face_3.png", "face_5.png", "face_6.png", "face_7.jpg", "face_8.jpg"]
         faces = [html.IMG(src=img) for img in face_images]
+
+        # NEW: Level-based enemy images
+        level_image_paths = {
+            1: [
+                "level1/dog.png",
+                "level1/fire.png",
+                "level1/matches.png",
+                "level1/patrolcan.png",
+                "level1/redshirt.png"
+            ],
+            2: [
+                "level2/broken guitar.png",
+                "level2/brokenbtl.png",
+                "level2/greentshirt.png",
+                "level2/sticker.png",
+                "level2/suitcase.png"
+            ],
+            3: [
+                "level3/cat.png",
+                "level3/chemical.paws.png",
+                "level3/flask.png",
+                "level3/purpletshirt.png",
+                "level3/spill.smoke.png"
+            ],
+        }
+
+        level_images = {
+            lvl: [html.IMG(src=path) for path in level_image_paths[lvl]] for lvl in level_image_paths
+        }
 
         enemies = []
         bullets = []
@@ -212,11 +243,22 @@
             global enemies, bullets, enemy_bullets, laser_beams, diagonal_shots, showing_level_title, ENEMY_SPEED, game_over, level, game_started, score, boss_hits, level_start_time
             rows = 3  # Always have three rows of enemies
             cols = 8 + level  # Add one extra column for each level
+
             if level <= MAX_LEVELS:
-                enemies = [{"pos": [col * (ENEMY_SIZE + 10) + 50, row * (ENEMY_SIZE + 10) + 50], "img": faces[int(window.Math.random() * len(faces))]} for row in range(rows) for col in range(cols)]
+                # Use the new level-specific images
+                current_level_images = level_images[level]
+                enemies = [
+                    {
+                        "pos": [col * (ENEMY_SIZE + 10) + 50, row * (ENEMY_SIZE + 10) + 50],
+                        "img": current_level_images[int(window.Math.random() * len(current_level_images))]
+                    }
+                    for row in range(rows)
+                    for col in range(cols)
+                ]
             else:
                 enemies = []
                 boss_hits = 0
+
             bullets = []
             enemy_bullets = []
             laser_beams = []
@@ -253,8 +295,8 @@
             ctx.fillText("Leaderboard", WIDTH // 2, HEIGHT // 1.3 - 40)
             if top_scores:
                 ctx.font = "24px 'Press Start 2P'"
-                for i, score in enumerate(top_scores):
-                    ctx.fillText(f"{i + 1}. {score['name']} - {score['score']}", WIDTH // 2, HEIGHT // 1.3 + 30 * i)
+                for i, score_data in enumerate(top_scores):
+                    ctx.fillText(f"{i + 1}. {score_data['name']} - {score_data['score']}", WIDTH // 2, HEIGHT // 1.3 + 30 * i)
 
         def draw_level_title():
             ctx.clearRect(0, 0, WIDTH, HEIGHT)
@@ -469,7 +511,8 @@
             if level <= MAX_LEVELS:
                 for enemy in enemies[:]:
                     for bullet in bullets[:]:
-                        if bullet[0] >= enemy["pos"][0] and bullet[0] <= enemy["pos"][0] + ENEMY_SIZE and bullet[1] >= enemy["pos"][1] and bullet[1] <= enemy["pos"][1] + ENEMY_SIZE:
+                        if (bullet[0] >= enemy["pos"][0] and bullet[0] <= enemy["pos"][0] + ENEMY_SIZE and
+                            bullet[1] >= enemy["pos"][1] and bullet[1] <= enemy["pos"][1] + ENEMY_SIZE):
                             enemies.remove(enemy)
                             bullets.remove(bullet)
                             score += 1
@@ -477,29 +520,36 @@
                             break
             else:
                 for bullet in bullets[:]:
-                    if bullet[0] >= boss_pos[0] and bullet[0] <= boss_pos[0] + BOSS_SIZE and bullet[1] >= boss_pos[1] and bullet[1] <= boss_pos[1] + BOSS_SIZE:
+                    if (bullet[0] >= boss_pos[0] and bullet[0] <= boss_pos[0] + BOSS_SIZE and
+                        bullet[1] >= boss_pos[1] and bullet[1] <= boss_pos[1] + BOSS_SIZE):
                         bullets.remove(bullet)
                         boss_hits += 1
                         explosion_audio.play()  # Play explosion sound
 
             for bullet in enemy_bullets[:]:
-                if bullet[0] >= player_pos[0] and bullet[0] <= player_pos[0] + PLAYER_SIZE and bullet[1] >= player_pos[1] and bullet[1] <= player_pos[1] + PLAYER_SIZE:
+                if (bullet[0] >= player_pos[0] and bullet[0] <= player_pos[0] + PLAYER_SIZE and
+                    bullet[1] >= player_pos[1] and bullet[1] <= player_pos[1] + PLAYER_SIZE):
                     game_over = True
 
             for laser in laser_beams[:]:
-                if laser["x"] <= player_pos[0] + PLAYER_SIZE and laser["x"] + LASER_WIDTH >= player_pos[0] and laser["y"] >= player_pos[1]:
+                if (laser["x"] <= player_pos[0] + PLAYER_SIZE and
+                    laser["x"] + LASER_WIDTH >= player_pos[0] and
+                    laser["y"] >= player_pos[1]):
                     game_over = True
 
             for shot in diagonal_shots[:]:
-                if shot["x"] <= player_pos[0] + PLAYER_SIZE and shot["x"] + BULLET_WIDTH >= player_pos[0] and shot["y"] <= player_pos[1] + BULLET_HEIGHT and shot["y"] + BULLET_HEIGHT >= player_pos[1]:
+                if (shot["x"] <= player_pos[0] + PLAYER_SIZE and
+                    shot["x"] + BULLET_WIDTH >= player_pos[0] and
+                    shot["y"] <= player_pos[1] + BULLET_HEIGHT and
+                    shot["y"] + BULLET_HEIGHT >= player_pos[1]):
                     game_over = True
 
             if level <= MAX_LEVELS:
                 for enemy in enemies:
-                    if (enemy["pos"][0] <= player_pos[0] <= enemy["pos"][0] + ENEMY_SIZE or
-                        enemy["pos"][0] <= player_pos[0] + PLAYER_SIZE <= enemy["pos"][0] + ENEMY_SIZE) and \
+                    if ((enemy["pos"][0] <= player_pos[0] <= enemy["pos"][0] + ENEMY_SIZE or
+                         enemy["pos"][0] <= player_pos[0] + PLAYER_SIZE <= enemy["pos"][0] + ENEMY_SIZE) and
                         (enemy["pos"][1] <= player_pos[1] <= enemy["pos"][1] + ENEMY_SIZE or
-                        enemy["pos"][1] <= player_pos[1] + PLAYER_SIZE <= enemy["pos"][1] + ENEMY_SIZE):
+                         enemy["pos"][1] <= player_pos[1] + PLAYER_SIZE <= enemy["pos"][1] + ENEMY_SIZE)):
                         game_over = True
 
                 move_down = False
@@ -644,3 +694,4 @@
     </script>
 </body>
 </html>
+
